--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     Generate
                 </button>
             </div>
-            <h6 class="design">Designed By Md.Shibly Sadik..!</h6>
+            <h6 class="design">Developed By Md.Shibly Sadik..!</h6>
         </div>
     </div>
 
